# QuarkTS-cpp

./: .deepsource.toml  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  _quark_t_s_8h_source.html  annotated.html  annotated_dup.js  bytebuffer_8hpp_source.html  classes.html  classq_o_s_1_1___event-members.html  classq_o_s_1_1___event.html  classq_o_s_1_1___event.js  classq_o_s_1_1___event__coll__graph.map  classq_o_s_1_1___event__coll__graph.md5  classq_o_s_1_1___event__inherit__graph.map  classq_o_s_1_1___event__inherit__graph.md5  classq_o_s_1_1byte_buffer-members.html  classq_o_s_1_1byte_buffer.html  classq_o_s_1_1byte_buffer.js  classq_o_s_1_1byte_buffer__coll__graph.md5  classq_o_s_1_1byte_buffer__inherit__graph.map  classq_o_s_1_1cli_1_1___handler-members.html  classq_o_s_1_1cli_1_1___handler.html  classq_o_s_1_1cli_1_1___handler.js  classq_o_s_1_1cli_1_1command-members.html  classq_o_s_1_1cli_1_1command.html  classq_o_s_1_1cli_1_1command.js  classq_o_s_1_1cli_1_1command__coll__graph.map  classq_o_s_1_1cli_1_1command__inherit__graph.map  classq_o_s_1_1cli_1_1command__inherit__graph.md5  classq_o_s_1_1cli_1_1handler__t-members.html  classq_o_s_1_1cli_1_1handler__t.html  classq_o_s_1_1cli_1_1handler__t.js  classq_o_s_1_1clock-members.html  classq_o_s_1_1clock.html  classq_o_s_1_1clock.js  classq_o_s_1_1co_1_1handle-members.html  classq_o_s_1_1co_1_1handle.html  (+499 more)
.github/workflows/: build.yml  doxygen_gen.yml  static-analisys.yml
check/: main.cpp  sa_check.ewd  sa_check.ewp  sa_check.ewt  sa_check.eww  simple_dry_test.cpp
check/Release/BrowseInfo/: sa_check.pbd  sa_check.pbw
check/settings/: sa_check.Debug.cspy.bat  sa_check.Debug.cspy.ps1  sa_check.Release.cspy.bat  sa_check.Release.cspy.ps1  sa_check.dnx  sa_check.wsdt
doc/: Doxygen  doxyfile_test
doc/pages/: _1_background.dox  _2_foundations.dox  _3_gettingstarted.dox  _4_events.dox  _5_extensions.dox  ext_atcli.dox  ext_coroutines.dox  ext_fsm.dox  ext_memmang.dox  ext_stimers.dox  ext_trace.dox  mainpage.dox
examples/Arduino_FlatStateMachine_LEDBlink/: Arduino_LEDBlinkStateMachine.ino
examples/Arduino_SimpleExample/: Arduino_LEDBlinkStateMachine.ino  Arduino_SimpleExample.ino
examples/LED_Blink_Flat_State_Machine/: LED_Blink_Flat_State_Machine.ino
examples/Simple_Example/: Simple_Example.ino
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  enums_0.js  enums_1.js  (+104 more)
src/: CMakeLists.txt  QuarkTS.h  bytebuffer.cpp  cli.cpp  clock.cpp  coroutine.cpp  critical.cpp  edgecheck.cpp  fsm.cpp  input.cpp  kernel.cpp  list.cpp  logger.cpp  memory.cpp  prioqueue.cpp  quarkts++.h  queue.cpp  response.cpp  simple_dry_test.cpp  task.cpp  test.cpp  timer.cpp  trace.cpp  util.cpp
src/config/: config.h
src/include/: bytebuffer.hpp  cli.hpp  clock.hpp  coroutine.hpp  critical.hpp  edgecheck.hpp  fsm.hpp  helper.hpp  input.hpp  kernel.hpp  list.hpp  logger.hpp  macro_overload.hpp  memory.hpp  prioqueue.hpp  queue.hpp  response.hpp  task.hpp  timer.hpp  trace.hpp  types.hpp  util.hpp
src/os/: CMakeLists.txt  bytebuffer.cpp  cli.cpp  clock.cpp  coroutine.cpp  critical.cpp  edgecheck.cpp  fsm.cpp  kernel.cpp  list.cpp  memory.cpp  prioQueue.cpp  queue.cpp  response.cpp  task.cpp  timer.cpp  util.cpp
src/os/include/: bytebuffer.hpp  cli.hpp  clock.hpp  coroutine.hpp  critical.hpp  edgecheck.hpp  fsm.hpp  helper.hpp  kernel.hpp  list.hpp  macroutil.hpp  memory.hpp  prioqueue.hpp  quarkts++.h  queue.hpp  response.hpp  task.hpp  timer.hpp  types.hpp  util.hpp
